--- a/multi-agents-chatbot.mdx
+++ b/multi-agents-chatbot.mdx
@@ -1,22 +1,20 @@
 ---
-title: Multi-Agents Chatbot
+title: "Multi-Agents Chatbot"
+description: "Multi-Agents Chatbot shows how Chatwize enables advanced workflow automations by coordinating multiple AI Agents in a no-code environment."
 ---
-
-#
 
 Chatwize is the first and most powerful no-code AI Chat framework that implements a multi-agent architecture. Multiple AI Agents work together in a coordinated orchestration to enable advanced workflow automations.
 
 <Frame>
-  <img src="/images/12312.png" />
+  ![](/images/12312.png)
 </Frame>
 
 We present this guide to help you understand how our Agents work together, as well as share with you some best practices surrounding multi-agent chatbot design.
 
 All Agents have two states:
 
-* **Active:** Agent is “Connected”. It is live and running.
-
-* **Inactive:** Agent is “Disabled”. It does not do anything.
+- **Active:** Agent is “Connected”. It is live and running.
+- **Inactive:** Agent is “Disabled”. It does not do anything.
 
 Only a single Agent engages with the user at any given time. Our AI Supervisor works in the background, in real time, to decide which Agent processes the user’s inquiry when it comes in.
 
@@ -24,12 +22,11 @@ Agents are completely isolated from one another. This means that you cannot tell
 
 The AI Supervisor assigns user queries to AI Agents based on the Agent description. This means that if you have only a single AI Agent, then you don’t need a very good description. But if you are working with multiple AI Agents, then you should have as explict a description as possible.
 
-* Agent Description - What kind of tasks should the Agent do?
-
-* Agent Prompt - How should the Agent perform its tasks?
+- Agent Description - What kind of tasks should the Agent do?
+- Agent Prompt - How should the Agent perform its tasks?
 
 <Frame>
-  <img src="/images/213213.png" />
+  ![](/images/213213.png)
 </Frame>
 
 AI Agent description is different from the Prompt. Description should tell the AI Supervisor what the Agent is designed to do at a high level, focusing on the type of user queries it should handle. Prompt is a set of instructions telling the AI Agent how to behave.
@@ -44,27 +41,17 @@ Chatwize Support
 
 Embody the role of “Chatwize Expert,” a specialized guide for Chatwize. Your main objective is to assist users with answering Chatwize-related questions related to:
 
-* Use cases
-
-* Features and capabilities
-
-* Data security
-
-* Pricing
-
-* AI Agents and multi-Agent architecture
-
-* User identity verification
-
-* Chunk curation
-
-* Function calling
-
-* Partnership program
-
-* Custom domains
-
-* Tokens
+- Use cases
+- Features and capabilities
+- Data security
+- Pricing
+- AI Agents and multi-Agent architecture
+- User identity verification
+- Chunk curation
+- Function calling
+- Partnership program
+- Custom domains
+- Tokens
 
 All intents handled by this Agent should be related to Chatwize.
 
@@ -76,13 +63,10 @@ The Product Expert handles any user queries related to Example Company’s produ
 
 The Order Status Assistant handles any user queries related to an order’s status. This includes questions regarding:
 
-* Product package tracking
-
-* Current package location
-
-* Estimated time of delivery
-
-* Late delivery compensation
+- Product package tracking
+- Current package location
+- Estimated time of delivery
+- Late delivery compensation
 
 So what makes for a good multi-agent chatbot design? How can I ensure that all my user intents are handled by the appropriate Agent?
 
@@ -92,14 +76,12 @@ On the surface, your users will not know that they are engaging with multiple AI
 
 In our AI Supervisor routing design, we use an algorithm that balances latency with performance. It will not always give you 100% accuracy, but you can get pretty close if you design your chatbots effectively.
 
-[​](https://guide.chatwize.ai/multi-agents-chatbot#debugging-the-chatbot)
+## [​](https://guide.chatwize.ai/multi-agents-chatbot#debugging-the-chatbot)
 Debugging the chatbot
----------------------
 
 If you notice that the chatbot is not responding to your expectations, then there may be two causes.
 
 1. The wrong Agent may have been assigned to handle the incoming user query.
-
 2. The Agent itself may not be optimally configured.
 
 To find out whether your intended Agent has been selected to handle the user’s query, go to “Inbox” and turn on debug mode. Toggle it on here:
@@ -113,7 +95,7 @@ If the Agent that handled the user query was not the correct one, you can return
 If the correct Agent handled the user query but the response was not what you expected, then the issue resides within the Agent itself. You will then need to update the Agent configuration. The most straightforward way to fix a response is by revising the AI’s answer directly:
 
 <Frame>
-  <img src="/images/321321.png" />
+  ![](/images/321321.png)
 </Frame>
 
 This ensures that the chatbot will generate an answer based on what you revised every time it encounters the question in the future, assuming the same Agent was chosen to respond to the query.
