Documentation edits made through Mintlify web editor

--- a/byok-pricing-guide.mdx
+++ b/byok-pricing-guide.mdx
@@ -46,7 +46,9 @@ The simplest estimate you can use is this:
 - For GPT-3.5 and GPT-3.5-16k, the cost is ~$0.0064 USD / MC
 - For GPT-4 series of LLMs, the cost is ~$0.0028 USD / MC
 
-For example, GPT-4-1106-4k uses 20 MCs per query. To estimate the cost in USD, multiply $0.0028 \* 20 = $0.056 USD.
+For example, GPT-4-1106-4k uses 20 MCs per query. To estimate the cost in USD, multiply $$0.0028 \\\* 20 = $$
+
+0.056 USD.
 
 This is a very rough estimate. Actual spend may be around \+/- 20% of the estimated number. This is because OpenAI charges
 for LLM usage based on "tokens", and input vs. output tokens cost different amounts even for the same LLM. To understand tokens, we
