--- a/api-usage-example-source.mdx
+++ b/api-usage-example-source.mdx
@@ -1,11 +1,14 @@
----
-title: "Uploading Data Sources"
-description: "Uploading Data Sources to your chatbot is simple with the Chatwize API—follow this guide to connect your data in minutes."
----
+export const meta = {
+  title: "Uploading Data Sources",
+  description: "Uploading Data Sources to your chatbot is simple with the Chatwize API—follow this guide to connect your data in minutes."
+};
+
+# Uploading Data Sources
 
 In this guide, we will walk through the process of uploading data sources to your chatbot using the Chatwize API.
 
 ## Prerequisites
+
 
 Before you begin, make sure you have the following:
 
